[DSTEW-1645] - WIP
